<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poke_hints"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/header"
        android:textSize="45sp"
        android:textColor="@color/primarydark"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/poke"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:id="@+id/postButton"
        android:layout_above="@+id/catButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/TextIcons"
        android:layout_margin="5dp"
        android:padding="6dp"
        android:background="@color/accent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:id="@+id/catButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/TextIcons"
        android:layout_margin="5dp"
        android:padding="6dp"
        android:background="@color/accent"/>

</RelativeLayout>
